--- a/app/03doc/views/doc.html
+++ b/app/03doc/views/doc.html
@@ -4,7 +4,7 @@
 	  ng-repeat="obj in objs"
 	  class="list-group-item"
 	  ui-sref=".info({api_id : obj.api_id})"
-	  >{{obj.api_name}}</a>
+	  >{{obj.text}}</a>
 	</div>
 </div>
 
