--- a/app/01ticket/views/ticketinfo.html
+++ b/app/01ticket/views/ticketinfo.html
@@ -16,7 +16,7 @@
         </thead>
         <tbody>
           <tr ng-repeat="obj in objs">
-            <td class="text-center">{{obj.type_name}}</td>
+            <td class="text-center">［{{obj.type_attr_name}}］{{obj.type_name}}</td>
             <td class="text-center">{{obj.count}}</td>
             <!-- <td class="text-center">
                 <button type="submit" 
