--- a/app/03doc/views/info.html
+++ b/app/03doc/views/info.html
@@ -4,6 +4,7 @@
 	<button type="button" 
 		class="btn btn-xs btn-info pull-right"
 		ng-click="edit()"
+		has-permission='doc.edit' 
 	>
 		<span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
 	</button>
