--- a/app/style/app.css
+++ b/app/style/app.css
@@ -13,4 +13,4 @@ body {
 .mt15{margin-top: 15px;}
 
 body { padding-bottom: 70px; }
-.navbar-brand{padding-top: 5px;}
+.navbar-brand{/*padding-top: 5px;*/}
