--- a/app/02device/views/tickettypelist.html
+++ b/app/02device/views/tickettypelist.html
@@ -7,13 +7,15 @@
     <div class="">
         <div class="checkbox" ng-repeat="obj in objs">
           <label>
-            <input type="checkbox" value="{{obj.code}}">
+            <input type="checkbox" value="{{obj.CODE}}"
+            ng-checked="obj.iselected == 1"
+            ng-click="selection(obj)">
             {{obj.name}}
           </label>
         </div>
     </div>
 </div>
 <div class="modal-footer">
-    <!-- <button class="btn btn-primary" type="button" ng-click="ok()">OK</button> -->
+    <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 </div>
