--- a/app/02device/views/configurationticket.html
+++ b/app/02device/views/configurationticket.html
@@ -1,5 +1,4 @@
 <div class="col-sm-10 col-sm-offset-1">
-	
 
 	<form class="form-horizontal">
 	  <div class="form-group">
@@ -11,23 +10,72 @@
 	  <div class="form-group">
 	    <label class="col-sm-2 control-label">有效区间：</label>
 	    <div class="col-sm-10">
-		    <p class="input-group">
-	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="dt" is-open="popup1.opened" ng-required="true" close-text="Close" />
+
+		    <p class="input-group col-sm-3 pull-left">
+	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" />
 	          <span class="input-group-btn">
-	            <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+	            <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
 	          </span>
 	        </p>
+	        <p class="form-control-static pull-left"> &nbsp;&nbsp;-&nbsp;&nbsp; </p>
+	        <p class="input-group col-sm-3 pull-left">
+	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-required="true" close-text="Close" />
+	          <span class="input-group-btn">
+	            <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
+	          </span>
+	        </p>
+
 	    </div>
 	  </div>
 	  
 	  <div class="form-group">
-	    <label class="col-sm-2 control-label">有效日期：</label>
+	    <label class="col-sm-2 control-label">有效时间：</label>
 	    <div class="col-sm-10">
-	      <p class="form-control-static">email@example.com</p>
+	      
+	    	<p class="input-group col-sm-3 pull-left">
+		        <select class="form-control" ng-model="time.start" 
+	              ng-options="t.code as t.name for t in timearr"
+	            ></select>
+	        </p>
+	        <p class="form-control-static pull-left"> &nbsp;&nbsp;-&nbsp;&nbsp; </p>
+	        <p class="input-group col-sm-3 pull-left">
+	          	<select class="form-control" ng-model="time.end" 
+	              ng-options="t.code as t.name for t in timearr"
+	            ></select>
+	        </p>
+
 	    </div>
 	  </div>
 
-
+	  <div class="form-group">
+	    <label class="col-sm-2 control-label">有效日期：</label>
+	    <div class="col-sm-10">
+			<label class="checkbox-inline">
+				<input type="checkbox" id="inlineCheckbox1" value="option1"> 星期一
+			</label>
+			<label class="checkbox-inline">
+				<input type="checkbox" id="inlineCheckbox2" value="option2"> 星期二
+			</label>
+			<label class="checkbox-inline">
+				<input type="checkbox" id="inlineCheckbox3" value="option3"> 星期三
+			</label>
+			<label class="checkbox-inline">
+				<input type="checkbox" id="inlineCheckbox1" value="option1"> 星期四
+			</label>
+			<label class="checkbox-inline">
+				<input type="checkbox" id="inlineCheckbox2" value="option2"> 星期五
+			</label>
+			<label class="checkbox-inline">
+				<input type="checkbox" id="inlineCheckbox3" value="option3"> 星期六
+			</label>
+			<label class="checkbox-inline">
+				<input type="checkbox" id="inlineCheckbox2" value="option2"> 星期日
+			</label>
+			<label class="checkbox-inline">
+				<input type="checkbox" id="inlineCheckbox3" value="option3"> 节日
+			</label>
+	    </div>
+	  </div>
 
 	  <div class="form-group">
 	    <div class="col-sm-offset-2 col-sm-10">
@@ -35,8 +83,5 @@
 	    </div>
 	  </div>
 	</form>
-
-
-
 
 </div>
