--- a/app/02device/views/list.html
+++ b/app/02device/views/list.html
@@ -4,18 +4,18 @@
     <thead>
       <tr>
         <th class="text-center col-md-1">设备类型</th>
-        <th class="text-center col-md-1">状态</th>
+        <!-- <th class="text-center col-md-1">状态</th> -->
         <th class="text-center col-md-1">备注</th>
         <th class="text-center col-md-2">设备号</th>
         <th class="text-center col-md-1">今日累计</th>
         <th class="text-center col-md-4">配置票种</th>
-        <th class="text-center col-md-1">操作</th>
+        <th class="text-center col-md-2">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.device_type}}</td>
-        <td class="text-center">{{obj.state}}</td>
+        <!-- <td class="text-center">{{obj.state}}</td> -->
         <td class="text-center">{{obj.remarks}}</td>
         <td class="text-center">{{obj.code}}</td>
         <td class="text-center">{{obj.total}}</td>
@@ -29,6 +29,10 @@
                 <li><a ui-sref="app.ticketlist">列表</a></li>
               </ul>
             </li> -->
+            <button type="submit" 
+            class="btn btn-default input-sm"
+            ng-click="edit(obj.id)"
+            >编辑</button>
             <button type="submit" 
             class="btn btn-default input-sm"
             ng-click="configurationticket(obj.code)"
