--- a/app/03doc/views/name.html
+++ b/app/03doc/views/name.html
@@ -13,6 +13,7 @@
 			<!-- ng-options="group.id as group.title for group in grouparr" -->
 			<select class="form-control" ng-model="group_id" >
 				<option value="ticket_destory"> 消票 </option>
+				<option value="ticketorder_query"> 订单查询 </option>
 			</select>
 
 		</div>
