--- a/app/99common/views/app.html
+++ b/app/99common/views/app.html
@@ -11,7 +11,7 @@
 	        <span class="icon-bar"></span>
 	      </button>
 	      <a class="navbar-brand" href="#/">
-	      	{{obj.name}}xxxxxx
+	      	{{obj.name}}
 	      </a>
 	    </div>
 
