--- a/app/08view/views/viewlist.html
+++ b/app/08view/views/viewlist.html
@@ -3,24 +3,13 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-10">
-                <!-- <label>景区</label>&nbsp;&nbsp;
-                <select class="form-control" ng-model="searchform.view" 
-                  ng-options="view.code as view.name for view in viewarr"
-                >
-                  <option value=""> --全部-- </option>
-                </select> -->
-                <!-- &nbsp;&nbsp;&nbsp;&nbsp;
-                <label>关键字</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="searchform.keyword" >
+                <label>景区名称</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="searchform.name" >
                 &nbsp;&nbsp;&nbsp;&nbsp;
-                <label>状态</label>&nbsp;&nbsp;
-                <select class="form-control" ng-model="searchform.state" >
-                  <option value=""> --全部-- </option>
-                  <option value="1"> 启用 </option>
-                  <option value="0"> 停用 </option>
-                </select> -->
-                <!--  &nbsp;&nbsp;&nbsp;&nbsp;
-                <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button> -->
+                <label>景区编号</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="searchform.code" >
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
             <div class="col-sm-2 text-right">
                 <button type="button" class="btn btn-info new" ng-click="create()">创建景区</button>
@@ -33,29 +22,51 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-3 text-center">景区名称</th>
+        <th class="col-md-5 text-center">景区名称</th>
         <th class="col-md-1 text-center">景区编号</th>
-        <th class="col-md-1 text-center">允许消票</th>
-        <th class="col-md-2 text-center">有效期</th>
-        <th class="col-md-3 text-center">预定详情</th>
-        <th class="col-md-2 text-center">操作</th>
+        <th class="col-md-1 text-center">星级</th>
+        <th class="col-md-2 text-center">排序</th>
+        <th class="col-md-3 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="">{{obj.name}}</td>
         <td class="text-center">{{obj.code}}</td>
-        <td class="text-center">{{obj.state}}</td>
-        <td class="text-center">{{obj.start_date}} - {{obj.end_date}}</td>
-        <td class="text-center">{{obj.book_info}}</td>
+        <td class="text-center">{{obj.star}}</td>
+        <td class="form-horizontal ">
+          <div class="col-sm-6">
+            <input class="form-control input-sm" 
+            style="height:22px;" 
+            type="text" 
+            value="{{obj.asort}}" 
+            ng-model="obj.asort">
+          </div>
+          <a ng-click="asort(obj.id, obj.asort)" class="btn btn-info btn-xs">gogo</a> 
+      </td>
         <td class="text-center">
-          <a ng-click="edit(obj.code)" class="btn btn-success btn-xs">编辑</a>
-          <a ng-show="obj.state=='0'" ng-click="start(obj.code)" class="btn btn-primary btn-xs">允许消票</a>
-          <a ng-show="obj.state=='1'" ng-click="stop(obj.code)" class="btn btn-danger btn-xs">禁止消票</a>
+          <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
+          <a ng-click="type(obj.id)" class="btn btn-danger btn-xs">配置票种</a>
+          <a ng-click="device(obj.id)" class="btn btn-primary btn-xs">配置设备</a>
         </td>
       </tr>
     </tbody>
   </table>
+
+
+  <div class="text-right">
+
+    <uib-pagination 
+      total-items="bigTotalItems" 
+      ng-model="bigCurrentPage" 
+      max-size="maxSize" 
+      class="pagination-sm" 
+      boundary-links="true" 
+      ng-change="load()"
+      rotate="false">
+    </uib-pagination>
+
+  </div>
   
 
 </div>
