--- a/app/07product/views/tkttype.html
+++ b/app/07product/views/tkttype.html
@@ -5,7 +5,7 @@
             <div class="col-sm-10">
                 <label>景区</label>&nbsp;&nbsp;
                 <select class="form-control" ng-model="searchform.view" 
-                  ng-options="view.code as view.name for view in viewarr"
+                  ng-options="view.id as view.name for view in viewarr"
                 >
                   <option value=""> --全部-- </option>
                 </select>
