--- a/app/10account/views/account.html
+++ b/app/10account/views/account.html
@@ -10,7 +10,7 @@
           'glyphicon-chevron-right': collapsed,
           'glyphicon-chevron-down': !collapsed
         }"></span></a>
-    {{node.title}}
+    {{node.name}}
     <!-- <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
         class="glyphicon glyphicon-remove"></span></a>
     <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span
@@ -23,13 +23,7 @@
 </script>
 
 <div class="row">
-  <div class="col-sm-12">
-    <h3>Basic Example</h3>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
+  <div class="col-sm-4">
     <div ui-tree id="tree-root" data-nodrop-enabled="true" data-drag-enabled="false">
       <ol ui-tree-nodes ng-model="data">
         <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
@@ -38,7 +32,7 @@
 
   </div>
 
-  <div class="col-sm-6">
+  <div class="col-sm-8">
     
     <!-- <pre class="code">{{ data | json }}</pre> -->
 
