--- a/app/99common/views/app.html
+++ b/app/99common/views/app.html
@@ -29,62 +29,18 @@
 		      	</li>
 		      </ul>
 		    </li>
-
-		    <!-- <li has-permission='ticket' class="dropdown" uib-dropdown  >
-		      <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle> 消票 <span class="caret"></span></a>
-		      <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
-		      	<li><a ui-sref="app.ticketlogin">登录</a></li>
-		        <li><a ui-sref="app.ticketinput">验票</a></li>
-	            <li><a ui-sref="app.ticketlist">列表</a></li>
-		      </ul>
-		    </li>
-
-		    <li has-permission='device' class="dropdown" uib-dropdown >
-		      <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle> 设备 <span class="caret"></span></a>
-		      <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
-	            <li><a ui-sref="app.devicelist">设备监控</a></li>
-	            <li><a ui-sref="app.devicetktlist">票种设置</a></li>
-	            <li><a ui-sref="app.devicelist">刷读监控</a></li>
-		      </ul>
-		    </li>
-
-		    <li has-permission='doc' class="dropdown" uib-dropdown >
-		      <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle> 文档 <span class="caret"></span></a>
-		      <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
-		      	<li
-		      	has-permission='doc.create'
-		      	><a ui-sref="app.docname">创建接口文档</a></li>
-		      	<li
-		      	has-permission='doc.create'
-		      	role="separator" class="divider"></li>
-	            <li>
-	            <a 
-	            ui-sref="app.doc({type : 'ticket_destory'})"
-	            >消票</a></li>
-	            <li
-	            has-permission='doc.device'
-	            ><a ui-sref="app.doc({type : 444})">设备</a></li>
-	            <li
-	            has-permission='doc.doc'
-	            ><a ui-sref="app.doc({type : 555})">文档</a></li>
-		      </ul>
-		    </li>
-
-
-		    <li has-permission='device' class="dropdown" uib-dropdown >
-		      <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle> 测试 <span class="caret"></span></a>
-		      <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
-	            <li><a ui-sref="app.table">表格</a></li>
-	            
-		      </ul>
-		    </li>
- -->
 	        
 	      </ul>
 
-	      <!-- <a href="manager/logout" class="btn btn-danger navbar-btn navbar-right">
-	        Sign out
-	      </a> -->
+	      <ul class="nav navbar-nav navbar-right">
+	        <li>
+		        <a href="manager/logout" class="btn " style="color: red;">
+		        	<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+		      	</a>
+	        </li>
+	      </ul>
+
+	      
 
 	    </div><!-- /.navbar-collapse -->
 
