--- a/app/99common/views/app.html
+++ b/app/99common/views/app.html
@@ -1,6 +1,6 @@
 <!-- top navbar-->
 <header>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-custom ">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
@@ -16,7 +16,7 @@
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
 
 	      <ul class="nav navbar-nav"  >
 	      	<li class="dropdown"
