--- a/app/07product/views/tkttype.html
+++ b/app/07product/views/tkttype.html
@@ -4,8 +4,8 @@
         <div class="form-group form-inline">
             <div class="col-sm-10">
                 <label>景区</label>&nbsp;&nbsp;
-                <select class="form-control" ng-model="searchform.view" 
-                  ng-options="view.id as view.name for view in viewarr"
+                <select class="form-control" ng-model="searchform.place_code" 
+                  ng-options="view.code as view.name for view in viewarr"
                 >
                   <option value=""> --全部-- </option>
                 </select>
@@ -39,7 +39,7 @@
         <th class="col-md-3 text-center">票种名称</th>
         <th class="col-md-1 text-center">票种编号</th>
         <th class="col-md-1 text-center">允许消票</th>
-        <th class="col-md-2 text-center">有效期</th>
+        <th class="col-md-1 text-center">票种状态</th>
         <th class="col-md-3 text-center">预定详情</th>
         <th class="col-md-2 text-center">操作</th>
       </tr>
@@ -48,13 +48,15 @@
       <tr ng-repeat="obj in tkttype.ticketarr">
         <td class="">{{obj.name}}</td>
         <td class="text-center">{{obj.code}}</td>
+        <td class="text-center">{{obj.used_state}}</td>
         <td class="text-center">{{obj.state}}</td>
-        <td class="text-center">{{obj.start_date}} - {{obj.end_date}}</td>
         <td class="text-center">{{obj.book_info}}</td>
         <td class="text-center">
-          <a ng-click="edit(obj.code)" class="btn btn-success btn-xs">编辑</a>
-          <a ng-show="obj.state=='0'" ng-click="start(obj.code)" class="btn btn-primary btn-xs">允许消票</a>
-          <a ng-show="obj.state=='1'" ng-click="stop(obj.code)" class="btn btn-danger btn-xs">禁止消票</a>
+		  <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">下架</a>
+          <a ng-show="obj.state=='0'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">上架</a>
+          <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
+          <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
+          <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
         </td>
       </tr>
     </tbody>
