--- a/app/07product/views/tkttypemodel.html
+++ b/app/07product/views/tkttypemodel.html
@@ -4,7 +4,7 @@
 		<label class="col-xs-2 control-label">票种名称</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入票种名称"
-			ng-model="obj.name"
+			ng-model="objt.name"
 			>
 		</div>
 	</div>
@@ -13,15 +13,15 @@
 		<label class="col-xs-2 control-label">票种编号</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入票种编号"
-			ng-model="obj.code"
+			ng-model="objt.code"
 			>
 		</div>
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-2 control-label">景区</label>
+		<label class="col-xs-2 control-label">所属景区</label>
 		<div class="col-xs-6">
-			<select class="form-control" ng-model="obj.view" 
+			<select class="form-control" ng-model="objt.place_code" 
               ng-options="view.code as view.name for view in viewarr"
             >
             </select>
@@ -32,45 +32,39 @@
 		<label class="col-xs-2 control-label">允许消票</label>
 		<div class="col-xs-6">
 			<label class="radio-inline">
-			  <input type="radio" name="state" value="0"
-			  ng-model="obj.state"
-			  > 不允许
+			  <input type="radio" name="used_state" value="0"
+			  ng-model="objt.used_state"
+			  > 允许
 			</label>
 			<label class="radio-inline">
-			  <input type="radio" name="state" value="1"
-			  ng-model="obj.state"
-			  > 允许
+			  <input type="radio" name="used_state" value="1"
+			  ng-model="objt.used_state"
+			  > 不允许
 			</label>
 		</div>
 	</div>
 
-
 	<div class="form-group">
-	    <label class="col-xs-2 control-label">有效期</label>
-	    <div class="col-xs-10">
-
-		    <p class="input-group col-xs-3 pull-left">
-	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
-	          <span class="input-group-btn">
-	            <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
-	          </span>
-	        </p>
-	        <p class="form-control-static pull-left"> &nbsp;&nbsp;-&nbsp;&nbsp; </p>
-	        <p class="input-group col-xs-3 pull-left">
-	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
-	          <span class="input-group-btn">
-	            <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
-	          </span>
-	        </p>
-
-	    </div>
+		<label class="col-xs-2 control-label">票种状态</label>
+		<div class="col-xs-6">
+			<label class="radio-inline">
+			  <input type="radio" name="state" value="0"
+			  ng-model="objt.state"
+			  > 下架
+			</label>
+			<label class="radio-inline">
+			  <input type="radio" name="state" value="1"
+			  ng-model="objt.state"
+			  > 上架
+			</label>
+		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">预订说明</label>
 		<div class="col-xs-6">
 			<textarea class="form-control" rows="3"
-			ng-model="obj.bookinfo"
+			ng-model="objt.book_info"
 			></textarea>
 		</div>
 	</div>
