--- a/app/style/app.css
+++ b/app/style/app.css
@@ -11,6 +11,7 @@ body {
 
 .mt10{margin-top: 10px;}
 .mt15{margin-top: 15px;}
+.mb10{margin-bottom: 10px;}
 
 body { padding-bottom: 70px; }
 .navbar-brand{/*padding-top: 5px;*/}
