--- a/app/07product/views/tkttypeattrmodel.html
+++ b/app/07product/views/tkttypeattrmodel.html
@@ -1,19 +1,19 @@
 <div class="col-xs-10 col-xs-offset-1 form-horizontal" >
 	
 	<div class="form-group">
-		<label class="col-xs-2 control-label">票种名称</label>
+		<label class="col-xs-2 control-label">票种属性</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入票种名称"
-			ng-model="objt.name"
+			<input type="text" class="form-control" placeholder="请输入票种属性"
+			ng-model="objt.type_attr"
 			>
 		</div>
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-2 control-label">票种编号</label>
+		<label class="col-xs-2 control-label">属性名称</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入票种编号"
-			ng-model="objt.code"
+			<input type="text" class="form-control" placeholder="请输入属性名称"
+			ng-model="objt.type_attr_name"
 			>
 		</div>
 	</div>
