--- a/app/07product/views/tktgoods.html
+++ b/app/07product/views/tktgoods.html
@@ -1,1 +1,66 @@
-tktgoods
+<div class="col-sm-12">
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="form-group form-inline">
+            <div class="col-sm-10">
+                <label>商品名称</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="searchform.name" >
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <label>景区编号</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="searchform.place_code" >
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
+            </div>
+            <div class="col-sm-2 text-right">
+                <button type="button" class="btn btn-info new" ng-click="create()">创建商品</button>
+            </div>
+        </div>
+    </div>
+</div><!-- searchArea -->
+
+
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th class="col-md-4 text-center">商品名称</th>
+        <th class="col-md-1 text-center">景区编号</th>
+        <th class="col-md-1 text-center">商品状态</th>
+        <th class="col-md-2 text-center">操作</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="obj in objs">
+        <td class="">{{obj.name}}</td>
+        <td class="text-center">{{obj.place_code}}</td>
+        <td class="text-center">{{obj.state}}</td>
+        <td class="text-center">
+          <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">下架</a>
+          <a ng-show="obj.state=='0'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">上架</a>
+          <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+
+  <div class="text-right">
+
+    <uib-pagination 
+      total-items="bigTotalItems" 
+      ng-model="bigCurrentPage" 
+      max-size="maxSize" 
+      class="pagination-sm" 
+      boundary-links="true" 
+      ng-change="load()"
+      items-per-page="itemsPerPage"
+      previous-text="上一页"
+      next-text="下一页"
+      first-text="首页"
+      last-text="末页"
+      rotate="false">
+    </uib-pagination>
+
+  </div>
+  
+
+</div>
