--- a/app/07product/views/tktsale.html
+++ b/app/07product/views/tktsale.html
@@ -3,7 +3,7 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-10">
-                <label>商品名称</label>&nbsp;&nbsp;
+                <label>销售品名称</label>&nbsp;&nbsp;
                 <input type="text" class="form-control" ng-model="searchform.name" >
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <label>景区编号</label>&nbsp;&nbsp;
@@ -22,10 +22,11 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-4 text-center">商品名称</th>
+        <th class="col-md-4 text-center">销售品名称</th>
         <th class="col-md-1 text-center">景区编号</th>
-        <th class="col-md-1 text-center">成本价格</th>
-        <th class="col-md-1 text-center">商品状态</th>
+        <th class="col-md-1 text-center">市场价</th>
+        <th class="col-md-1 text-center">居游价</th>
+        <th class="col-md-1 text-center">销售品状态</th>
         <th class="col-md-2 text-center">操作</th>
       </tr>
     </thead>
@@ -33,7 +34,8 @@
       <tr ng-repeat="obj in objs">
         <td class="">{{obj.name}}</td>
         <td class="text-center">{{obj.place_code}}</td>
-        <td class="text-center">{{obj.cost_price}}</td>
+        <td class="text-center">{{obj.market_price}}</td>
+        <td class="text-center">{{obj.guide_price}}</td>
         <td class="text-center">{{obj.state}}</td>
         <td class="text-center">
           <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">无效</a>
