--- a/app/07product/views/tkttypeattr.html
+++ b/app/07product/views/tkttypeattr.html
@@ -12,10 +12,10 @@
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
-        <td class="text-center">{{obj.type_attr}}</td>
+        <td class="text-center">{{obj.ticket_attr_id}}</td>
         <td class="text-center">{{obj.type_attr_name}}</td>
         <td class="text-center">
-          <a ng-click="edit(obj.type_attr)" class="btn btn-success btn-xs">编辑</a>
+          <a ng-click="edit(obj.ticket_attr_id)" class="btn btn-success btn-xs">编辑</a>
         </td>
       </tr>
     </tbody>
